<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_dark_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/m24">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="192dp"
            android:layout_marginBottom="@dimen/m16"
            android:src="@drawable/im_account_landing"
            android:contentDescription="@string/landing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/musticapro_semibold"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m16"
            android:fontFamily="@font/musticapro_regular"
            android:text="@string/login_to_continue"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="2dp"
            app:hideAnimationBehavior="outward"
            app:indicatorColor="@color/md_theme_dark_onSurface"
            app:indicatorDirectionLinear="startToEnd"
            app:showAnimationBehavior="inward"
            app:trackColor="@android:color/transparent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlUserEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m12"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/md_theme_dark_surface"
            app:boxCornerRadiusBottomEnd="@dimen/m16"
            app:boxCornerRadiusBottomStart="@dimen/m16"
            app:boxCornerRadiusTopEnd="@dimen/m16"
            app:boxCornerRadiusTopStart="@dimen/m16"
            app:boxStrokeColor="@drawable/line_selector"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/pq_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/musticapro_medium"
                android:hint="@string/username_email"
                android:inputType="textEmailAddress"
                android:letterSpacing=".025"
                android:textColor="@color/white"
                android:textColorHint="#CCCCCC" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m12"
            app:boxBackgroundColor="@color/md_theme_dark_surface"
            app:boxCornerRadiusBottomEnd="@dimen/m16"
            app:boxCornerRadiusBottomStart="@dimen/m16"
            app:boxCornerRadiusTopEnd="@dimen/m16"
            app:boxCornerRadiusTopStart="@dimen/m16"
            app:boxStrokeColor="@drawable/line_selector"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_padlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/musticapro_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:letterSpacing=".025"
                android:textColor="@color/white"
                android:textColorHint="#CCCCCC" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForget"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/musticapro_medium"
            android:gravity="center"
            android:focusable="false"
            android:padding="0dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/md_theme_dark_primary"
            android:textSize="12sp" />

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/normal_selector_button"
            android:fontFamily="@font/musticapro_semibold"
            android:paddingVertical="@dimen/m8"
            android:text="@string/login"
            android:textAllCaps="false"
            android:enabled="true"
            android:textColor="@color/normal_selector_text"
            android:textSize="22sp"
            app:finalCornerAngle="@dimen/m64"
            app:initialCornerAngle="@dimen/m64"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_padding="@dimen/m8" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m12"
            android:fontFamily="@font/musticapro_regular"
            android:text="@string/social_account"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFacebook"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="@dimen/m64"
                android:layout_height="@dimen/m64"
                android:layout_marginHorizontal="@dimen/m12"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:focusable="false"
                android:insetBottom="0dp"
                android:padding="17dp"
                app:backgroundTint="@color/md_theme_dark_surface"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_facebook"
                app:iconSize="30dp"
                app:iconTint="@null"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogle"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="@dimen/m64"
                android:layout_height="@dimen/m64"
                android:layout_marginHorizontal="@dimen/m24"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:focusable="false"
                android:insetBottom="0dp"
                android:padding="18dp"
                app:backgroundTint="@color/md_theme_dark_surface"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_google"
                app:iconSize="30dp"
                app:iconTint="@null"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMicrosoft"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="@dimen/m64"
                android:layout_height="@dimen/m64"
                android:layout_marginHorizontal="@dimen/m12"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:focusable="false"
                android:padding="20dp"
                app:backgroundTint="@color/md_theme_dark_surface"
                app:cornerRadius="20dp"
                app:icon="@drawable/microsoft"
                app:iconSize="25dp"
                app:iconTint="@null"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/m24"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/musticapro_regular"
                android:text="@string/no_account"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/toRegister"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/musticapro_semibold"
                android:gravity="center"
                android:paddingHorizontal="@dimen/m8"
                android:paddingVertical="0dp"
                android:focusable="false"
                android:text="@string/sign_up_now"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>